# wx-token-server

./: Cargo.toml  LICENSE  README.md
.github/workflows/: auto-release.yml
src/: main.rs
